opam-version: "1.2"
maintainer: "jeremie@dimino.org"
authors: ["Jérémie Dimino"]
license: "BSD3"
homepage: "https://github.com/diml/ppx_view_pattern"
bug-reports: "https://github.com/diml/utop/ppx_view_pattern"
dev-repo: "git://github.com/diml/ppx_view_pattern.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build & >= "1.0+beta7"}
  "ocaml-migrate-parsetree"
]
